shortened regualtion (after expanding it)

--- a/paper/sections/challenges.tex
+++ b/paper/sections/challenges.tex
@@ -167,26 +167,19 @@ impediment for most users~\cite{ruoti2019usability}.
 %With a key management solution in place, a further challenge is obtaining transactions for auditing purposes---auditing is a much touted capability of blockchain across our dataset. In a decentralized environment, running a full node on the network, or relying on a entity that does (such as a blockchain explorer website or a lightweight user-client) is necessary. 
 
 \subsection{Legality and regulation}
-Some of the benefits claimed by blockchain systems are not derived from the 
-underlying technology, but rather from a lack of regulation compared to 
-competing services. 
-For example, blockchain-based money transfer services are generally orders of 
-magnitude faster than similar bank-provided services, but this speed increase 
-does not arise from the use of blockchain (which generally has higher technical 
-overhead) but because the blockchain-based services are not complying with the 
-time-consuming regulatory processes that are required of the bank-provided services (e.g., 
-mandatory holding periods).
-Our analysis revealed widespread concern with regulatory issues surrounding 
-cryptocurrencies, blockchain-based assets, and other blockchain applications. 
-This is unstable from a risk perspective and will be untenable in the long run 
-as regulators catch up to these schemes.
 
-It is important to note that regulation applies indirectly to technology, based on how the technology is used within a firm's operations.
-Therefore, there will be no direct regulation of Bitcoin, for example, but rather regulation of firms that use Bitcoin according to how they are using it. 
-Consider the example of a Bitcoin exchange service that derives income from fees paid in Bitcoin: it will have to consider tax declarations as a business (\eg service taxes and capital gains), financial reporting as a money service business (\eg know your customer, anti-money laundering and anti-terrorist financing), generally acceptable accounting standards for audited financial reports (\eg reporting Bitcoin as an intangible asset on a balance sheet), and potentially additional regulation that applies to financial exchanges, banks, and/or custodians.
-In most countries, each of these already broad categories are administered by different government branches.
-Countries like the United States and Canada may require licensing or registration and have taken enforcement action against non-compliant firms.
-An extreme case of regulation is prohibition of cryptocurrencies or Blockchain-assets. At the time of writing, the largest country to ban Bitcoin is Pakistan and the largest country to prohibit wide categories of cryptocurrency use is China.
+% JC: To shorten
+Some benefits claimed by blockchain systems cannot be attributed to the underlying technology, but rather to side-stepping the regulation and oversight that slows down existing systems (for example, international payments or raising capital by selling virtual assets to investors). As regulators catch up, compliance is prioritized. Blockchain is not directly regulated; firms are regulated based on how they use it. The most discussed areas of regulation are taxation, audited financial statements, transaction reporting (know-your-customer / anti-money laundering / anti-terrorist financing), securities law, banking, and custodianship. An extreme case of regulation is prohibition of cryptocurrencies or Blockchain-assets. At the time of writing, the largest country to ban Bitcoin is Pakistan and the largest country to prohibit wide categories of cryptocurrency use is China.
+
+
+%For example, blockchain-based money transfer services are generally orders of  magnitude faster than similar bank-provided services, but this speed increase  does not arise from the use of blockchain (which generally has higher technical  overhead) but because the blockchain-based services are not complying with the time-consuming regulatory processes that are required of the bank-provided services (e.g., mandatory holding periods). Our analysis revealed widespread concern with regulatory issues surrounding cryptocurrencies, blockchain-based assets, and other blockchain applications. This is unstable from a risk perspective and will be untenable in the long run  as regulators catch up to these schemes.
+
+%It is important to note that regulation applies indirectly to technology, based on how the technology is used within a firm's operations.
+%Therefore, there will be no direct regulation of Bitcoin, for example, but rather regulation of firms that use Bitcoin according to how they are using it. 
+%Consider the example of a Bitcoin exchange service that derives income from fees paid in Bitcoin: it will have to consider tax declarations as a business (\eg service taxes and capital gains), financial reporting as a money service business (\eg know your customer, anti-money laundering and anti-terrorist financing), generally acceptable accounting standards for audited financial reports (\eg reporting Bitcoin as an intangible asset on a balance sheet), and potentially additional regulation that applies to financial exchanges, banks, and/or custodians.
+%In most countries, each of these already broad categories are administered by different government branches.
+%Countries like the United States and Canada may require licensing or registration and have taken enforcement action against non-compliant firms.
+
  
  
 %As applications of blockchain technology proliferate, they have drawn significant attention from the regulatory bodies around the world.  In the settings of cryptocurrencies, a number of concerns such as the prevalence of black-market transactions, tax evasion, money laundering, and terrorist financing have drawn calls to regulate how such cryptocurrencies can be used.  An excellent review article by Kiviat~\cite{Kiviat15} outlines some of the issues that arise in regulating blockchain transactions.  
