--- a/paper/bib/bitcoin.bib
+++ b/paper/bib/bitcoin.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Jeremy Clark at 2019-09-11 09:37:22 -0400 
+%% Created for Jeremy Clark at 2019-09-12 11:16:49 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -10,6 +10,14 @@
 @comment{jabref-meta: databaseType:biblatex;}
 
 
+
+@article{Sch19,
+	Author = {B Schneier},
+	Date-Added = {2019-09-12 11:09:22 -0400},
+	Date-Modified = {2019-09-12 11:16:49 -0400},
+	Journal = {Wired},
+	Title = {There's No Good Reason to Trust Blockchain Technology},
+	Year = {2019}}
 
 @techreport{RKYCC19,
 	Author = {S Ruoti and B Kaiser and A Yerukhimovich and J Clark and R Cunningham},
