--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -7,7 +7,7 @@ In 2008, an author using the pseudonym Satoshi Nakamoto wrote a white paper desc
 In response to Bitcoin's success, the technology was quickly dissected to understand how it works and what is new. Its most innovative component has been labeled ``the blockchain,'' a decentralized approach for participants to agree upon and lock in data and computation.
 
 % Cite Bruce Schneier wired article
-When we read technology news, we are most commonly left with the cheery impression that blockchain technology reduces or even completely eliminates trust. The use cases of such an innovation stretch the imagination! Occasionally, we get lucky and hear a contrarian take~\cite{}. The truth about trust is that it's complicated. Blockchain does eliminate specific, narrow reliances on trust, but it might shift it into new and different assumptions---assumptions that might be better or worst for each specific use case. Likewise, there are not a lot of single sentence talking points that will be accurate about blockchain technology's efficiency, security, cost, etc. 
+When we read technology news, we are most commonly left with the cheery impression that blockchain technology reduces or even completely eliminates trust. The use cases of such an innovation stretch the imagination! Occasionally, we get lucky and hear a contrarian take~\cite{Sch19}. The truth about trust is that it's complicated. Blockchain does eliminate specific, narrow reliances on trust, but it might shift it into new and different assumptions---assumptions that might be better or worst for each specific use case. Likewise, there are not a lot of single-sentence talking points that will be accurate about blockchain technology's efficiency, security, cost, etc. 
 
 It is clear that we need a more nuanced discussion on this technology. We frequently hear business executives, government leaders, investors, and researchers ask the following three questions: (1) what exactly is blockchain technology, (2) what capabilities does it provide, and (3) what are good applications? Our goal for this article is to thoroughly answer these questions,  provide a holistic overview of blockchain technology that separates hype from reality, and propose a useful lexicon for discussing the specifics of blockchain technology in the future.
 
