--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -16,8 +16,6 @@ The first broad category of blockchain concepts are technical properties, which 
 \subsection{Shared Governance and Operation}
 \label{sec:sharedgov}
 
-\jnote{While I personally understand this section, I don't think a general audience will. It might help to give examples (what is an example of a transaction, valid/invalid, a consensus rule, etc.) without losing the generality. It needs some polish to make it more relatable.}
-
 %Before describing how shared governance and operation defines Blockchain technology, it is important to define both of these concepts.
 %Governance is the process by which one or more entities (e.g., an individual, a company, a government agency) define how a system will operate---i.e., what operations are supported and how those operations function.
 %Governance can be singular---a single entity (e.g., a developer, a company) defines the system---or it can be shared---multiple entities work together to define the system (e.g., IETF, RFC).
@@ -25,7 +23,7 @@ The first broad category of blockchain concepts are technical properties, which 
 %Operation can be singular---a single entity executes the system (e.g., a trusted third party)---or shared---multiple entities collectively operate the system (e.g., through the use of a consensus protocol).
 %Note, distributed operation (i.e., operation on many machines) does not imply shared operation, as the owner/operator of all distributed nodes may still be a single entity.
 
-Blockchain technology addresses the scenario in which a collection of entities want to participate in a communal system but do not trust each other or any third party to operate the  system singlehandedly. By operating networked devices---referred to hereafter as \emph{miners}---for both the governance and operation of the system, each entity can be assured that the system is operating correctly. Even if some number of the miners become compromised (within bounds), the uncompromised miners can reject the malicious actions taken by the compromised miners and preserve the correct operation of the system. In this regard, Blockchain technology provides \emph{diffused trust} wherein it is not individual miners but rather the collective of all miners that is trusted. This is often given the misnomer `trustlessness' --- trust still exists but has been diffused among multiple parties.
+Blockchain technology addresses the scenario in which a collection of entities want to participate in a communal system but do not trust each other or any third party to operate the system singlehandedly. By deciding on the system details (governance) and then deploying networked devices (referred to as \emph{miners}) to run the system, each entity can become assured of correct operation. If a small number of the miners become compromised (within bounds that are highly nuanced), the uncompromised miners can reject the malicious actions taken by the compromised miners and preserve the correct operation of the system. In this regard, blockchain technology provides \emph{diffused trust} where the collective of miners is trusted. This is often given the misnomer `trustlessness' --- trust still exists but has been diffused.
 
 Shared operation is enabled by the use of \emph{consensus protocols}, which are used by the miners to agree upon which operations---known as \emph{transactions}---will be executed by the system. The consensus protocols allow miners to view transactions and validate that the 
 system is operating appropriately. This is an important consideration as it is not only valid transactions that will be submitted to the consensus protocol. Shared governance is possible because miners  only approve the transactions they believe are acceptable, according to hardcoded software rules, effectively allowing them to vote for how the system should function. If there is disagreement regarding system functionality, it is possible for a blockchain-based system to fork, resulting in the creation of competing systems that include only a subset of each other's transactions. Usually these forks are temporary, with miners eventually choosing to all adopt the same rules, but it is possible for a fork to result in the permanent creation of two non-interoperable blockchain systems (\eg Bitcoin and Bitcoin Cash).
