edited section II and III

--- a/paper/sections/methodology.tex
+++ b/paper/sections/methodology.tex
@@ -41,8 +41,8 @@ We continued gathering and reviewing documents until each of us felt that the la
 
 \subsection{Results}
 
-% JC: I updated 68 to 75 as the summation of the breakdown below 21 + 14 + 12 + 13+  15
-Our analysis ultimately revealed a set of 75 interconnected concepts that define Blockchain technology. These concepts are grouped into 5 broader categories:
+% JC: Is this supposed to be 75 instead of 68 as the summation of the breakdown below 21 + 14 + 12 + 13+  15
+Our analysis ultimately revealed a set of 68 interconnected concepts that define Blockchain technology. These concepts are grouped into 5 broader categories:
 
 \begin{itemize}
 
@@ -58,9 +58,9 @@ Our analysis ultimately revealed a set of 75 interconnected concepts that define
 
 \end{itemize}
 
-While we divide the concepts into these five categories, individual concepts are highly interconnected, both inter- and intra-category. This provides credence to the notion that Blockchain technology overall is a cohesive whole, with each its component concepts serving a purpose in the overall technology.
+While we divide the concepts into these five categories, individual concepts are highly interconnected, both inter- and intra-category. This provides credence to the notion that Blockchain technology overall is a cohesive whole, with each its component concepts serving a purpose in the overall technology. For this article, we select the some interesting and useful highlight from our full analysis, and refer the interested reader to our technical companion article and data files for the rest~\cite{RKYCC19}.
 
-Our categorization resulted in 21 technical properties, 13 capabilities, 14 technical primitives, 15 use cases and 12 normative properties. For this article, we select the some interesting and useful highlight from our full analysis, and refer the interested reader to our technical companion article and data files for the rest~\cite{RKYCC19}.
+%Our categorization resulted in 21 technical properties, 13 capabilities, 14 technical primitives, 15 use cases and 12 normative properties.
 
 %\subsection{Grounded Theory Data Analysis}
 
